syntax = "proto3";


service GMS {
    rpc SendMessage(WriteMessageRequest) returns (WriteMessageResponse) {}
}

message MessageType {
    uint32  CRC32 = 1;
    uint32  Magic = 2;
    uint32  Attributes = 3;
    uint64  KeyLength = 4;
    bytes   KeyPayload = 5;
    uint64  ValueLength = 6;
    bytes   ValuePayload = 7;
}

message WriteMessageRequest {
    string      Partition = 1; 
    string      TopicName = 2;
    repeated    MessageType message = 3;
}

message WriteMessageResponse {
    int32   Code = 1;
    string  Result = 2;
}
